# c-init

./: .gitignore  .unused.txt  MANIFEST.in  README.md  c-init.py  cinit.py  setup.cfg  setup.py
c-init-res/: CMakeLists.txt  CMakeMakefile  Makefile  main.c
c-init/c-init-res/: Makefile
cpp-init/: __main__.py
cpp-init/cpp-init-res/: CMakeLists.txt
