[metadata]
name = c-init
version = 0.1.1
author = beProsto
author_email = be1prosto@gmail.com
description = A simple tool for setting up c/c++ projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beProsto/c-init
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = c-init
python_requires = >=3.0
include_package_data = True
